--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,7 @@ body {
 
 /* 메인 비주얼 */
 #main_visual {
-    max-width: 1920px;
-    min-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     overflow: hidden;
     margin-bottom: 60px;
@@ -88,13 +87,14 @@ body {
 /* bxslider 테두리 제거 */
 .bx-wrapper {border:none;}
 
-/* 메인 컨텐트 */
+/* 메인 컨텐트 영역 */
 #main_content {
     width: 1120px;
     overflow: hidden;
     margin: 0 auto;
     padding: 60px 0;
 }
+
 /* 메인 컨텐트 텍스트 */
 #main_content > .main_content_text {
     font-size: 26px;
@@ -107,7 +107,7 @@ body {
     font-size: 14px;
 }
 
-/* 메인 컨텐트 */
+/* 메인 컨텐트 리스트 */
 #main_content .content_list {
     overflow: hidden;
 }
@@ -123,7 +123,123 @@ body {
     width: 100%;
 }
 
+/* 메인 컨텐트 정보 */
+#content_list_info {
+    overflow: hidden;
+}
+
+/* 첫 번째 컨텐트*/
+.content_list_info_1 {
+    width: 360px;
+    text-align: center;
+    float: left;
+    margin-right: 20px;
+}
+.content_list_info_1 > p:first-child > span {
+    color: #c3512f;
+    font-size: 18px;
+    font-weight: 500;
+}
+.content_list_info_1 > p:last-child {
+    color: #7c6853;
+    font-size: 12px;
+    font-weight: 400px;
+    margin-top: 10px;
+}
+
+/* 두 번째 컨텐트 */
+.content_list_info_2 {
+    width: 360px;
+    text-align: center;
+    float: left;
+    margin-right: 20px;
+}
+.content_list_info_2 > p:first-child > span {
+    color: #c3512f;
+    font-size: 18px;
+    font-weight: 500;
+}
+.content_list_info_2 > p:last-child {
+    color: #7c6853;
+    font-size: 12px;
+    font-weight: 400px;
+    margin-top: 10px;
+}
+
+/* 세 번째 컨텐트*/
+.content_list_info_3 {
+    width: 360px;
+    text-align: center;
+    float: left;
+}
+.content_list_info_3 > p:first-child > span {
+    color: #c3512f;
+    font-size: 18px;
+    font-weight: 500;
+}
+.content_list_info_3 > p:last-child {
+    color: #7c6853;
+    font-size: 12px;
+    font-weight: 400px;
+    margin-top: 10px;
+}
+
+
+
+
+
 /* 비디오 섹션 */ 
-#video > .video_list {
-    
+#video {
+    width: 1120px; 
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 60px 0;
+}
+
+/* 비디오 타이틀 */
+#video .video_title {
+    font-size: 16px;
+    font-weight: 700;
+    color: #7c6853;
+    margin-bottom: 20px;
+}
+.line {
+    display: inline-block;
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+/* 비디오 리스트 */
+#video .video_list {
+    overflow: hidden;
+}
+#video .video_list > li {
+    float: left;
+    width: 530px;
+    margin-right: 60px;
+}
+#video .video_list > li:last-child {
+    margin-right: 0;
+}
+#video .video_list > li > img {
+    width: 100%;
+}
+
+/* footer */
+#main_footer {
+    width: 100%; height: 255px;
+    margin: 0 auto;
+    background: #883d1f;
+    text-align: center;
+    color: #fff;
+    padding: 30px 0;
+}
+#main_footer > .footer_content {
+    width: 1200px;
+}
+#main_footer .footer_sns {
+    margin-bottom: 26px;
+}
+#main_footer > .footer_sns > img {
+    width: 66px;
 }
