--- a/css/sub1-1.css
+++ b/css/sub1-1.css
@@ -4,7 +4,7 @@
 #sub_visual {
     width: 100%;
     margin: 0 auto;
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
 }
 
 /* 서브 비주얼 배경 */
