--- a/css/sub2-2.css
+++ b/css/sub2-2.css
@@ -17,9 +17,10 @@
 /* 로케이션 비주얼 텍스트 */
 #location_visual > header > p {
     color: #fff;
-    position: relative;
+    position: absolute;
     top: 40%;
     left: 50%;
+    transform: translateX(-50%);
     font-size: 30px; font-weight: 700;
 }
 
@@ -48,6 +49,7 @@
     width: 100%; height: 67px;
     color: #fff;
     text-align: center;
+    line-height: 33.5px;
     margin-bottom: 37px;
     font-size: 13px;
 }
