--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
 
 /* 메인 비주얼 */
 #main_visual {
-    width: 100%; height: 800px;
+    width: 100%; /* height: 800px; */
     margin: 0 auto;
     overflow: hidden;
     margin-bottom: 60px;
